fixed broken layout in FF

--- a/web/src/components/Auth.scss
+++ b/web/src/components/Auth.scss
@@ -2,6 +2,8 @@
   height: 100%;
 }
 .phone-wrapper {
+  display: flex;
+  padding-left: 30px;
   margin: 0 auto;
   align-self: flex-end;
 }
